--- a/data/projects.json
+++ b/data/projects.json
@@ -2,7 +2,8 @@
     {
         "title": "Service Tickets",
         "description": "Sistema de abertura de chamados",
-        "link": "https://github.com/SamillyNunes/tickets-service",
+        "githubLink": "https://github.com/SamillyNunes/tickets-service",
+        "link":"https://servicetickets.netlify.app",
         "isHighlight": true,
         "photos": [
             "/images/projects/tickets/dashboard.png",
@@ -22,7 +23,7 @@
     {
         "title": "Dashboard Admin",
         "description": "Dashboard de administração de algum serviço",
-        "link": "https://github.com/SamillyNunes/dashboard_admin",
+        "githubLink": "https://github.com/SamillyNunes/dashboard_admin",
         "isHighlight": true,
         "photos": [
             "/images/projects/dashboard_admin/auth-mobile.png",
@@ -41,7 +42,8 @@
     {
         "title": "Next CRUD",
         "description": "Sistema de cadastro, edição, consulta e remoção simples.",
-        "link": "https://github.com/SamillyNunes/next-crud",
+        "githubLink": "https://github.com/SamillyNunes/next-crud",
+        "link":"https://nextjs-crud-ssn.netlify.app",
         "isHighlight": true,
         "photos": [
             "/images/projects/next-crud/editar.png",
@@ -58,16 +60,31 @@
     {
         "title": "Quizz",
         "description": "Quiz de perguntas previamente cadastradas na API criada dentro do mesmo projeto.",
-        "link": "https://github.com/SamillyNunes/quizz",
+        "githubLink": "https://github.com/SamillyNunes/quizz",
+        "link":"https://quizz-ssn.vercel.app/",
         "isHighlight": true,
         "photos": [
             "/images/projects/quizz/quiz.jpg",
             "/images/projects/quizz/results.jpg"
         ],
         "language":"Typescript",
+        "framework":"NextJs",
         "features": [
             "Criação de API com questões",
             "Consulta a API"
         ]
+    },
+    {
+        "title": "MontyHall",
+        "description": "Simples implementação do jogo Monty Hall, ou o jogo das portas.",
+        "githubLink": "https://github.com/SamillyNunes/monty_hall",
+        "link":"https://monty-hall-ssn.vercel.app/",
+        "isHighlight": false,
+        "photos": [
+            "/images/projects/monty-hall/home.png",
+            "/images/projects/monty-hall/game.png"
+        ],
+        "language":"Typescript",
+        "framework":"NextJs"
     }
 ]
